Fix not showing helium viz icons

--- a/zeppelin-web-angular/src/app/pages/workspace/share/result/result.component.less
+++ b/zeppelin-web-angular/src/app/pages/workspace/share/result/result.component.less
@@ -28,6 +28,11 @@
     }
   }
 
+  .viz-icon {
+    width: 35px;
+    height: 32px;
+  }
+
   ::ng-deep {
 
     .visualization-selector .ant-radio-button-wrapper {
